--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -17,11 +17,12 @@
     <div class="preamble" id="preamble">
         <div class="text">Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!</div>
         <label>
-            <input type="text" id="schoolchild-name" placeholder="Bitte geben Sie die Name hier ein"/>
+            <input type="text" id="schoolchild-name" placeholder="Bitte gebe deinen Namen hier ein"/>
         </label>
         <button class="nav-button preamble-button" description="Verstanden Taste"
                 onclick="disablePreamble()">Verstanden!</button>
     </div>
+
 </div>
 
 <div class="chapter">
