--- a/EyeTrackingTest/Eyetracker.html
+++ b/EyeTrackingTest/Eyetracker.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -18,7 +18,7 @@
 <div id="debug"></div>
 <div class="container">
     <div class="preamble" id="preamble">
-        <div class="text">Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!</div>
+        <div class="text">Dies ist eine Demo für die Bachelorarbeit für digitale Lerninhalte.</div>
         <label>
             <input type="text" id="schoolchild-name" placeholder="Bitte geben Sie die Name hier ein"/>
         </label>
@@ -29,6 +29,7 @@
 </div>
 
 <div id="callibration-box"></div>
+<canvas id="draw_canvas"></canvas>
 <div class="chapter">
     <div class="clearfix">
         <div class="section">
@@ -77,7 +78,8 @@
 <!--</div>-->
 
 <div class="chapter">
-    <div class="section" onVisible="renameCloseButton;Das ist ein Test">
+    <div class="section">
+    <!--onVisible="renameCloseButton;Das ist ein Test"-->
         <h1>1 Der Aufbau des menschlichen Auges</h1>
         <img class="eye-small" src="images/eye.png" alt=""/>
     </div>
@@ -119,7 +121,7 @@
                 <div id="modal-window-1" class="modal">
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <video class="video" id="video-1" type="video/mp4" loop></video>
+                        <video style="z-index: 4;" class="video" id="video-1" type="video/mp4" loop></video>
                     </div>
                 </div>
                 Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
@@ -274,7 +276,7 @@
         <input class="submit save" id="dropdown-save-button" type="submit" value="Speichern" track-number="2"
                onclick="checkAnswer(); showVideo(this)">
         <div id="modal-window-2" class="modal">
-            <div class="modal-content">
+            <div class="modal-content" style="z-index: 4;">
                 <span class="close">&times;</span>
                 <video class="video" id="video-2" type="video/mp4" loop></video>
             </div>
