--- a/EyeTrackingTest/Eyetracker.html
+++ b/EyeTrackingTest/Eyetracker.html
@@ -338,6 +338,7 @@
 </div>
 <div id="callibration-box"></div>
 <canvas id="draw_canvas"></canvas>
+<div id="debug"></div>
 <div class="chapter">
     <div class="clearfix">
         <div class="section">
